# cadenza

./: .gitignore  DEPLOY.md  MUJOCO_LOG.TXT  README.md  chain_of_thought_run.jsonl  example.py  pyproject.toml  requirements.txt  sequential_run.jsonl
ai_models/: __init__.py
ai_models/g1/: __init__.py  depth.py  rgb.py  vla.py
ai_models/go1/: __init__.py  depth.py  rgb.py  vla.py
examples/cadenza_arm/: pick_and_place.py
models/arm/: scene.xml
models/g1/: g1_position.xml
models/go1/: _cadenza_scene_10072d6d0.xml  _cadenza_scene_1012de120.xml  _cadenza_scene_104c259d0.xml  _cadenza_scene_1051596d0.xml  _cadenza_scene_1062c0f50.xml  _cadenza_scene_106a20da0.xml  _cadenza_scene_106a49070.xml  _cadenza_scene_106ff7770.xml  _cadenza_scene_10703f620.xml  _cadenza_scene_10713ecf0.xml  _cadenza_scene_107312cf0.xml  _cadenza_scene_1075f2cf0.xml  _cadenza_scene_10796ecf0.xml  _cadenza_scene_107985820.xml  _cadenza_scene_10798acf0.xml  _cadenza_scene_1079ef620.xml  _cadenza_scene_107f94620.xml  _cadenza_scene_108093080.xml  _cadenza_scene_108eab4d0.xml  _cadenza_scene_109053620.xml  _cadenza_scene_1093b74d0.xml  _cadenza_scene_10947f770.xml  _cadenza_scene_10950acf0.xml  _cadenza_scene_109576ed0.xml  _cadenza_scene_10964fa70.xml  _cadenza_scene_109adf4d0.xml  _cadenza_scene_109b06360.xml  _cadenza_scene_109b56cf0.xml  _cadenza_scene_109b92cf0.xml  _cadenza_scene_109cdecf0.xml  _cadenza_scene_10a4853a0.xml  _cadenza_scene_10af73770.xml  _cadenza_scene_10b0bb4d0.xml  _cadenza_scene_10b252450.xml  _cadenza_scene_10b57f770.xml  _cadenza_scene_10b64af00.xml  _cadenza_scene_10b836ba0.xml  _cadenza_scene_10b8ff4d0.xml  _cadenza_scene_10bc5f770.xml  _cadenza_scene_10bcc1af0.xml  (+3 more)
scripts/: make_demo_clips.py
src/: __init__.py  __main__.py  _accel.py  _assets.py  arm.py  g1.py  g1_gait.py  go1.py  scene.py  sensor_view.py  sim.py
src/actions/: __init__.py  action_builder.py  arm_library.py  library.py
src/inference/: __init__.py  base.py  chain_of_thought.py  sequential.py  stream.py
src/locomotion/: bipedal_gait.py
src/mcp/: __init__.py  __main__.py  bus.py  coordinator.py  link.py  server.py
src/parser/: __init__.py  lora_action_head.py  optimizer.py  translator.py
src/scenes/: base.xml
src/spatial/: __init__.py  map.py  memory.py  topology.py  voxel_grid.py
src/stack/: detector.py  gym_adapter.py  runtime.py
src/stack/adapters/: __init__.py
src/vla/: guardian.py
tests/: .spatial_memory.cadenza-scene.xml  test_arm_actions.py  test_chain_of_thought.py  test_go1_streaming.py  test_lora_action_head.py  test_mcp_coordination.py  test_scene_snake.py  test_sequential_orchestrator.py  test_spatial_memory.py  test_vla_obstacle.py
tests/built-in_actions/: chain_of_thought_field.xml  test_builtin_actions.py
