[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cadenza-lab"
version = "1.7.0"
authors = [
  { name = "Aksh Parekh", email = "acparekh@stanford.edu" },
]
description = "Cadenza Lab - The SDK to build in physical AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "mujoco",
    "click>=8.0",
]

[project.optional-dependencies]
deploy = ["paramiko"]
ai = ["torch>=2.0"]
mcp = ["fastmcp>=2.0"]

[project.urls]
Homepage = "https://github.com/aparekh02/cadenza"
Issues = "https://github.com/aparekh02/cadenza/issues"

[project.scripts]
cadenza = "cadenza.__main__:cli"

[tool.setuptools.package-dir]
cadenza = "src"

[tool.setuptools]
packages = [
    "cadenza",
    "cadenza.actions",
    "cadenza.actions.trained",
    "cadenza.deploy",
    "cadenza.inference",
    "cadenza.locomotion",
    "cadenza.mcp",
    "cadenza.parser",
    "cadenza.robots",
    "cadenza.robots.g1",
    "cadenza.robots.go1",
    "cadenza.spatial",
    "cadenza.stack",
    "cadenza.stack.adapters",
    "cadenza.stack.modalities",
    "cadenza.stack.vision",
    "cadenza.vla",
]

[tool.setuptools.package-data]
cadenza = ["library/**/*", "scenes/**/*"]

[dependency-groups]
dev = [
    "requests>=2.33.1",
    "twine>=6.2.0",
]
